# hermes-chrome

./: .gitignore  AGENTS.md  README.md  config.example.yaml  pyproject.toml  start.ps1  start.sh
DOC/: 00-context-and-goals.md  01-current-state.md  02-multi-account-deployment.md  03-aggregator-design.md  04-agent-platform.md  05-llm-router-multi-provider.md  06-multimodal-vision.md  07-implementation-roadmap.md  08-tech-stack-and-costs.md  09-open-questions-and-todos.md  09a-p0-decisions.md  09b-p1-decisions.md  09c-p2-deferred.md  09d-p3-future.md  10-deployment-guide.md  README.md
agent/: bot.py  browser_lifecycle.py  browser_tab_smoke.py  builtin_tools.py  cards.py  channels.py  config.py  conversation.py  health.py  intents.py  knowledge_sink.py  knowledge_store.py  llm_client.py  log_rotation.py  master.py  mcp_client.py  nlu.py  oicc_bridge.py  schedule_store.py  scheduler.py  skill_loader.py  watchdog.py  worker.py  worker_state.py  zombies.py
deploy/: README.md  clone-oicc.ps1  clone-oicc.sh  config.template.json  register-native-host-macos.sh  register-native-host.ps1  uninstall-macos.sh  uninstall.ps1
fapiao-1688-extension/: background.js  content.js  injected.js  manifest.json  popup.css  popup.html  popup.js
scripts/: _check_skill.py  browser_tab_smoke.py  chase_dry_run.py  debug_connect.py  nlu_probe.py  notify.ps1  oicc_bridge.py
state/: schedule.example.yaml
tests/: test_bot_smoke.py  test_browser_lifecycle.py  test_browser_tab_smoke.py  test_builtin_tools.py  test_ecom_sourcing_rules.py  test_intents.py  test_knowledge_sink.py  test_nlu.py  (+11 more)
(+16 files in other folders)
